-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8288772 | 20 | Erik Gahlin | P3 | Resolved | Fixed | b03 |
| JDK-8291263 | 19.0.2 | Erik Gahlin | P3 | Resolved | Fixed | b01 |
| JDK-8291094 | 19.0.1 | Erik Gahlin | P3 | Resolved | Fixed | b04 |
Seems related to JDK-8203359.
- backported by
-
JDK-8288772 15% increase in JFR footprint in Noop-Base
-
- Resolved
-
-
JDK-8291094 15% increase in JFR footprint in Noop-Base
-
- Resolved
-
-
JDK-8291263 15% increase in JFR footprint in Noop-Base
-
- Resolved
-