8268398: 15% increase in JFR footprint in Noop-Base

Reviewed-by: jbachorik